all made desktop version

--- a/app/about.html
+++ b/app/about.html
@@ -244,7 +244,7 @@
               <p class="footer__info-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
               </p>
-              <a href="mailto:ouremailaddress@email.com" class="footer__info-email">
+              <a href="mailto:ouremailaddress@email.com" class="info-email">
                 ouremailaddress@email.com
               </a>
               <form action="#" class="footer__form">
