--- a/app/gallery.html
+++ b/app/gallery.html
@@ -8,8 +8,7 @@
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -24,7 +23,7 @@
                 <a class="menu__list-link" href="#">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link menu__list-link--active" href="#">Gallery</a>
               </li>
             </ul>
           </nav>
@@ -56,10 +55,9 @@
                 Furniture for life
               </h4>
               <p class="rightside-menu__text">
-                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1
-                art party microdosing, put a bird on it brooklyn
+                Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn
               </p>
-              <img class="rightside-menu__images" src="images/content/rightside-img.jpg" alt="images">
+              <img class="rightside-menu__images" src="images/rightside-img.jpg" alt="images">
             </div>
           </div>
         </div>
@@ -67,143 +65,21 @@
     </header>
 
     <main class="main">
-      <section class="top">
-        <div class="top__inner">
-          <div class="top__slider">
-
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/content/chair.jpg" alt="">
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Furniture collection
-                </h2>
-                <p class="top__slider-text">
-                  Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical
-                  drinking vinegar austint
-                </p>
-              </div>
-            </div>
-
+      <div class="container">
+        <div class="breadcrumbs">
+          <div class="container">
+            <ul class="breadcrumbs__list">
+              <li class="breadcrumbs__item">
+                <a href="#" class="breadcrumbs__link">Home</a>
+              </li>
+              <li class="breadcrumbs__item">
+                <a href="#" class="breadcrumbs__link">Gallery</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </section>
-
-      <section class="new-collection">
-        <div class="container-fluid">
-          <h3 class="new-collection__title">Furniture new collection</h3>
-          <p class="new-collection__text">
-            Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
-          </p>
-          <div class="collection">
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection/1.jpg" alt="">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection/2.jpg" alt="">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection/3.jpg" alt="">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection/4.jpg" alt="">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection/5.jpg" alt="">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
-
-      <section class="decor">
-        <div class="container">
-          <h2 class="decor__title">
-            Aesthetic 
-            ethical drinking
-          </h2>
-          <p class="decor__text">
-            Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint
-          </p>
-        </div>
-      </section>
-
-      <section class="work-path">
-        <div class="container">
-          <h3 class="work-path__title">How it works</h3>
-          <div class="work-path__items">
-            <div class="work-path__items-box">
-              <div class="work-path__item work-path__item--consultation">
-                <img src="images/content/work-icons/1.svg" alt="" class="work-path__item-img">
-                <h6 class="work-path__item-title">
-                  Designer Consultation
-                </h6>
-                <p class="work-path__item-text">
-                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
-                </p>
-              </div>
-              <div class="work-path__item work-path__item--production">
-                <img src="images/content/work-icons/2.svg" alt="" class="work-path__item-img">
-                <h6 class="work-path__item-title">
-                  Production
-                </h6>
-                <p class="work-path__item-text">
-                  Everyday carry actually neutra authentic kogi shabby chic
-                </p>
-              </div>
-            </div>
-            <div class="work-path__item work-path__item--measurements">
-              <img src="images/content/work-icons/3.svg" alt="" class="work-path__item-img">
-              <h6 class="work-path__item-title">
-                Measurements
-              </h6>
-              <p class="work-path__item-text">
-                Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <div class="gallery">
+      </div>
+      <div class="gallery gallery--page">
         <div class="container-fluid">
           <div class="gallery__buttons">
             <button type="button" class="gallery__btn" data-filter=".category-bedroom">
@@ -240,9 +116,39 @@
               <a href="#" class="gallery__item">
                 <img src="images/content/gallery/5.jpg" alt="images">
               </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/1.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/2.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/3.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/4.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/5.jpg" alt="images">
+              </a>
             </div>
 
             <div class="gallery__items mix category-living">
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/1.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/2.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/3.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/4.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/5.jpg" alt="images">
+              </a>
               <a href="#" class="gallery__item">
                 <img src="images/content/gallery/1.jpg" alt="images">
               </a>
@@ -276,9 +182,39 @@
               <a href="#" class="gallery__item">
                 <img src="images/content/gallery/5.jpg" alt="images">
               </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/1.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/2.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/3.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/4.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/5.jpg" alt="images">
+              </a>
             </div>
 
             <div class="gallery__items mix category-dining">
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/1.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/2.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/3.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/4.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/5.jpg" alt="images">
+              </a>
               <a href="#" class="gallery__item">
                 <img src="images/content/gallery/1.jpg" alt="images">
               </a>
@@ -312,50 +248,25 @@
               <a href="#" class="gallery__item">
                 <img src="images/content/gallery/5.jpg" alt="images">
               </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/1.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/2.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/3.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/4.jpg" alt="images">
+              </a>
+              <a href="#" class="gallery__item">
+                <img src="images/content/gallery/5.jpg" alt="images">
+              </a>
             </div>
           </div>
         </div>
       </div>
-
-      <section class="blog-box">
-        <div class="container">
-          <h3 class="blog-box__title">
-            More inspiration ideas in our blog
-          </h3>
-          <div class="blog-box__items">
-            <div class="blog-box__item">
-              <a href="#" class="blog-box__img-link">
-                <img class="blog-box__img" src="images/content/blog/1.jpg" alt="blog">
-              </a>
-              <div class="blog-box__links">
-                <span class="blog-box__date">March 12, 2020</span> |
-                <a class="blog-box__author" href="#">by Ann Summers</a> |
-                <a class="blog-box__theme" href="#">Inrerior</a>
-              </div>
-              <a href="#" class="blog-box__item-titlelink">
-                <h4 class="blog-box__item-title">
-                  Listicle actually selvage activated charcoal for the drinking vinegar 
-                </h4>
-              </a>
-            </div>
-            <div class="blog-box__item">
-              <a href="#" class="blog-box__img-link">
-                <img class="blog-box__img" src="images/content/blog/2.jpg" alt="blog">
-              </a>
-              <div class="blog-box__links">
-                <span class="blog-box__date">September 28,2020</span> |
-                <a class="blog-box__author" href="#">by Finnagan Morningstar</a> |
-                <a class="blog-box__theme" href="#">Dining room interior</a>
-              </div>
-              <a href="#" class="blog-box__item-titlelink">
-                <h4 class="blog-box__item-title">
-                  Red selfies edison bulb four dollar toast humblebrag
-                </h4>
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
 
     <footer class="footer">
