--- a/app/page.html
+++ b/app/page.html
@@ -65,7 +65,6 @@
     </header>
 
     <main class="main">
-      <div class="container">
         <div class="breadcrumbs">
           <div class="container">
             <ul class="breadcrumbs__list">
@@ -78,7 +77,6 @@
             </ul>
           </div>
         </div>
-      </div>
     </main>
 
     <footer class="footer">
@@ -92,7 +90,7 @@
               <p class="footer__info-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing schlitz you probably occupy
               </p>
-              <a href="mailto:ouremailaddress@email.com" class="footer__info-email">
+              <a href="mailto:ouremailaddress@email.com" class="info-email">
                 ouremailaddress@email.com
               </a>
               <form action="#" class="footer__form">
