--- a/app/contacts.html
+++ b/app/contacts.html
@@ -36,10 +36,15 @@
                 <a class="menu__list-link" href="#">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link menu__list-link--active" href="#">Contact</a>
               </li>
             </ul>
           </nav>
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="menu icon">
           </button>
@@ -79,7 +84,7 @@
       </div>
 
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12608.755478977095!2d-122.41005103341126!3d37.80904486044299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1647551586155!5m2!1sru!2sru" width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12608.755478977095!2d-122.41005103341126!3d37.80904486044299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580f18d8c6ea7%3A0x5d7f53fb70a3a903!2zNzI1IEdyZWVuIFN0LCBTYW4gRnJhbmNpc2NvLCBDQSA5NDEzMywg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1647551586155!5m2!1sru!2sru" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
       <section class="contact">
